--- a/ui/package.json
+++ b/ui/package.json
@@ -5,6 +5,7 @@
   "author": "Micooz",
   "homepage": "/",
   "scripts": {
+    "analyze": "source-map-explorer build/static/js/main.*",
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start-js": "react-app-rewired start",
@@ -49,7 +50,8 @@
     "react-app-rewire-hot-loader": "^1.0.1",
     "react-app-rewire-mobx": "^1.0.8",
     "react-app-rewired": "^1.5.0",
-    "react-hot-loader": "^4.0.0"
+    "react-hot-loader": "^4.0.0",
+    "source-map-explorer": "^1.5.0"
   },
   "browserslist": {
     "development": [
