--- a/core/package.json
+++ b/core/package.json
@@ -46,6 +46,13 @@
     "pkg": "^4.3.1",
     "rimraf": "^2.6.2"
   },
+  "repository": {
+    "url": "https://github.com/blinksocks/blinksocks-gui",
+    "type": "git"
+  },
+  "bugs": {
+    "url": "https://github.com/blinksocks/blinksocks-gui/issues"
+  },
   "nodemonConfig": {
     "ignore": [
       "test/*",
