core: add a new http interface "/logs/:id"

--- a/ui/package.json
+++ b/ui/package.json
@@ -70,6 +70,9 @@
     "/verify": {
       "target": "http://localhost:3000"
     },
+    "/logs": {
+      "target": "http://localhost:3000"
+    },
     "/socket.io": {
       "target": "http://localhost:3000",
       "ws": true
