--- a/ui/package.json
+++ b/ui/package.json
@@ -17,40 +17,42 @@
     "eject": "react-app-rewired eject"
   },
   "dependencies": {
-    "@blueprintjs/core": "^2.2.1",
+    "@blueprintjs/core": "^2.3.1",
     "classnames": "^2.2.5",
-    "echarts": "^4.0.4",
+    "echarts": "^4.1.0",
     "filesize": "^3.6.1",
-    "i18next": "^11.2.3",
+    "i18next": "^11.3.1",
     "i18next-browser-languagedetector": "^2.2.0",
     "i18next-xhr-backend": "^1.5.1",
     "jssha": "^2.3.1",
     "lodash": "^4.17.10",
-    "mobx": "^4.2.0",
-    "mobx-react": "^5.0.0",
+    "mobx": "^4.2.1",
+    "mobx-react": "^5.1.2",
     "normalize.css": "^8.0.0",
     "nprogress": "^0.2.0",
     "prop-types": "^15.6.1",
-    "qs": "^6.5.1",
+    "qs": "^6.5.2",
     "react": "^16.3.2",
-    "react-beautiful-dnd": "^7.1.0",
+    "react-beautiful-dnd": "^7.1.2",
     "react-dom": "^16.3.2",
     "react-ga": "^2.5.0",
+    "react-google-maps": "^9.4.5",
     "react-i18next": "^7.6.1",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "2.0.0-next.9754a231",
     "react-transition-group": "^2.3.1",
+    "recompose": "^0.27.0",
     "socket.io-client": "^2.1.0",
     "url-parse": "^1.4.0"
   },
   "devDependencies": {
-    "fs-extra": "^5.0.0",
-    "node-sass-chokidar": "^1.2.2",
-    "npm-run-all": "^4.1.2",
+    "fs-extra": "^6.0.1",
+    "node-sass-chokidar": "^1.3.0",
+    "npm-run-all": "^4.1.3",
     "react-app-rewire-hot-loader": "^1.0.1",
     "react-app-rewire-mobx": "^1.0.8",
     "react-app-rewired": "^1.5.2",
-    "react-hot-loader": "^4.1.2",
+    "react-hot-loader": "^4.1.3",
+    "react-scripts": "^2.0.0-next.66cc7a90",
     "source-map-explorer": "^1.5.0"
   },
   "browserslist": {
@@ -78,5 +80,5 @@
       "ws": true
     }
   },
-  "license": "MIT"
+  "license": "Apache-2.0"
 }
