--- a/ui/package.json
+++ b/ui/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^16.3.2",
     "react-ga": "^2.5.0",
     "react-google-maps": "^9.4.5",
+    "react-helmet": "^5.2.0",
     "react-i18next": "^7.6.1",
     "react-router-dom": "^4.2.2",
     "react-transition-group": "^2.3.1",
